@@ -1,3 +1,6 @@
+* Thu Mar 23 2017 Jeanne Greulich <jeanne.greulich@onyxpoint.com> - 6.0.2-0
+- Fixed path for systemctl
+
 * Fri Mar 10 2017 Trevor Vaughan <tvaughan@onyxpoint.com> - 6.0.1-0
 - Fixed the metadata.json dependencies for simp-tcpwrappers
 
